--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,22 +8,14 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
-
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-         </div>
+<script src="angular.min.js"></script>
+<body ng-app="LunchCheck">
+   <div ng-controller="LunchCheckController">
+      list comma separated dishes you usually have for lunch<br>
+     <div>
+        <button ng-click="CheckMenu()">Check If Too Much</button>
+       <br>
+      </div>         
    </div>
-
 </body>
 </html>
