--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -9,13 +9,17 @@
     </style>
   </head>
 <script src="angular.min.js"></script>
-<body ng-app="LunchCheck">
+<body ng-app="LunchCheck">  
    <div ng-controller="LunchCheckController">
-      list comma separated dishes you usually have for lunch<br>
+     <div>
+        list comma separated dishes you usually have for lunch<input type="text" ng-model="menu">
+      </div>      
      <div>
         <button ng-click="CheckMenu()">Check If Too Much</button>
-       <br>
-      </div>         
+     </div>         
+     <div>
+          
+     </div>
    </div>
 </body>
 </html>
