--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -1,25 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html ng-app='NarrowItDownApp'>
   <head>
-    <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <title>Narrow Down Your Menu Choice</title>
+
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller='NarrowItDownController as searchlist'>
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" ng-model="searchlist.searchTerm" placeholder="search term" >
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+        <button class="btn btn-primary"
+        ng-click="searchlist.logMenuItems(searchTerm)">{{ menu.searchTerm }}
+        Narrow It Down For Me!</button>
     </div>
 
     <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
-  </div>
+    <found-items
+      found-items="searchlist.items"
+      on-remove="searchlist.removeItem(index)"></found-items>
+    </div>
 
 </body>
 </html>
